crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__list_clause_with_assign.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 264
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\ntype Option = Some Int | None\ndoInit self =\n    case self of\n        [] -> trace \"unreachable\" fail\n        [_] as a -> a\n        [(Some _) as n, x] -> [n]\n        [a, x] -> [x]\n        a :: b :: c -> c\nmain = eq (doInit [Some 1, None]) [Some 1]\n"
---
--- core
let message#45 : string = "unreachable" in
let eq#2 : list 'erased -> list 'erased -> bool = \xs#7 : list 'erased ys#8 : list 'erased -> equalsData (listData xs#7) (listData ys#8) in
let fromString#10 : string -> string = \value#43 : string -> value#43 in
let doInit#3 : list Main.Option -> list Main.Option = \self#9 : list Main.Option -> let match#19 : list Main.Option = self#9 in
let leaf#31 : Main.Option -> Main.Option -> list Main.Option -> list Main.Option = \a#16 : Main.Option b#17 : Main.Option c#18 : list Main.Option -> c#18 in
case@List match#19 of
  Nil -> trace (fromString#10 message#45) in error
  Cons field#32 field#33 -> case@List field#33 of
    Nil -> let a#11 : list Main.Option = match#19 in
    a#11
    Cons field#34 field#35 -> let projection#44 : pair int (list Data) = unConstrData field#32 in
    case@Pair projection#44 of
      Pair tag#41 fields#42 -> case@Tag tag#41 of
        0 -> case@List field#35 of
          Nil -> let n#12 : Main.Option = field#32 in
          let x#13 : Main.Option = field#34 in
          mkCons n#12 (con (list data) [])
          Cons field#37 field#38 -> let a#16 : Main.Option = field#32 in
          let b#17 : Main.Option = field#34 in
          let c#18 : list Main.Option = field#35 in
          leaf#31 a#16 b#17 c#18
        1 -> case@List field#35 of
          Nil -> let a#14 : Main.Option = field#32 in
          let x#15 : Main.Option = field#34 in
          mkCons x#15 (con (list data) [])
          Cons field#39 field#40 -> let a#16 : Main.Option = field#32 in
          let b#17 : Main.Option = field#34 in
          let c#18 : list Main.Option = field#35 in
          leaf#31 a#16 b#17 c#18 in
let fromInt#5 : int -> Int = iData in
let main#1 : bool = eq#2 (doInit#3 (mkCons ((\field#4 : Int -> constrData 0 (mkCons field#4 (con (list data) []))) (fromInt#5 1)) (mkCons (constrData 1 (con (list data) [])) (con (list data) [])))) (mkCons ((\field#6 : Int -> constrData 0 (mkCons field#6 (con (list data) []))) (fromInt#5 1)) (con (list data) [])) in
main#1
--- uplc
(program 1.1.0
  [(lam message_45
    [(lam eq_2
      [(lam fromString_10
        [(lam doInit_3
          [(lam fromInt_5
            [(lam main_1 main_1)
              [[eq_2
                [doInit_3
                  [[(force (builtin mkCons))
                    [(lam field_4
                      [[(builtin constrData) (con integer 0)]
                        [[(force (builtin mkCons)) field_4] (con (list data) [])]])
                      [fromInt_5 (con integer 1)]]]
                    [[(force (builtin mkCons))
                      [[(builtin constrData) (con integer 1)] (con (list data) [])]]
                      (con (list data) [])]]]]
                [[(force (builtin mkCons))
                  [(lam field_6
                    [[(builtin constrData) (con integer 0)]
                      [[(force (builtin mkCons)) field_6] (con (list data) [])]])
                    [fromInt_5 (con integer 1)]]]
                  (con (list data) [])]]])
            (builtin iData)])
          (lam self_9
            [(lam match_19
              [(lam leaf_31
                (case
                  match_19
                  (lam field_32
                    (lam field_33
                      (case
                        field_33
                        (lam field_34
                          (lam field_35
                            [(lam projection_44
                              (case
                                projection_44
                                (lam tag_41
                                  (lam fields_42
                                    (case
                                      tag_41
                                      (case
                                        field_35
                                        (lam field_37
                                          (lam field_38
                                            [(lam a_16
                                              [(lam b_17 [(lam c_18 [[[leaf_31 a_16] b_17] c_18]) field_35]) field_34])
                                              field_32]))
                                        [(lam n_12
                                          [(lam x_13 [[(force (builtin mkCons)) n_12] (con (list data) [])]) field_34])
                                          field_32])
                                      (case
                                        field_35
                                        (lam field_39
                                          (lam field_40
                                            [(lam a_16
                                              [(lam b_17 [(lam c_18 [[[leaf_31 a_16] b_17] c_18]) field_35]) field_34])
                                              field_32]))
                                        [(lam a_14
                                          [(lam x_15 [[(force (builtin mkCons)) x_15] (con (list data) [])]) field_34])
                                          field_32]))))))
                              [(builtin unConstrData) field_32]]))
                        [(lam a_11 a_11) match_19])))
                  (force [[(force (builtin trace)) [fromString_10 message_45]] (delay (error))])))
                (lam a_16 (lam b_17 (lam c_18 c_18)))])
              self_9])])
        (lam value_43 value_43)])
      (lam xs_7
        (lam ys_8
          [[(builtin equalsData) [(builtin listData) xs_7]] [(builtin listData) ys_8]]))])
    (con string "unreachable")])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 3812390, memory: 12649
