crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__list_fields_unwrap.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 150
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Lift exposing (lower)\ntype Fields = Fields { a : Bytes, b : Int }\ndataFields : unit -> list Fields\ndataFields _ = [Fields { a = #\"\", b = 14 }, Fields { a = #\"AA\", b = 0 }]\nmain =\n    case dataFields () of\n        (Fields { b }) :: _ -> lessThanInteger 0 (lower b)\n        _ -> False\n"
---
--- unoptimized Core
let fromBytes#21 : bytes -> Bytes = bData in
let fromInt#22 : int -> Int = iData in
let dataFields#2 : unit -> list Main.Fields = \arg#18 : unit -> let match#25 : unit = arg#18 in
mkCons ((\field#19 : Bytes field#20 : Int -> constrData 0 (mkCons field#19 (mkCons field#20 (con (list data) [])))) (fromBytes#21 (con bytestring #)) (fromInt#22 14)) (mkCons ((\field#23 : Bytes field#24 : Int -> constrData 0 (mkCons field#23 (mkCons field#24 (con (list data) [])))) (fromBytes#21 (con bytestring #aa)) (fromInt#22 0)) (con (list data) [])) in
let fromUnit#3 : unit -> unit = \value#26 : unit -> value#26 in
let fromInt#5 : int -> int = \value#27 : int -> value#27 in
let lower#6 : Int -> int = unIData in
let fromBool#7 : bool -> bool = \value#28 : bool -> value#28 in
let match#8 : list Main.Fields = dataFields#2 (fromUnit#3 ()) in
let main#1 : bool = case@List match#8 of
  Nil -> fromBool#7 false
  Cons field#9 field#10 -> let projection#29 : pair int (list Data) = unConstrData field#9 in
  case@Pair projection#29 of
    Pair tag#13 fields#14 -> case@List fields#14 of
      Cons ignored#15 fieldTail#16 -> case@List fieldTail#16 of
        Cons field#12 fieldTail#17 -> let b#4 : Int = field#12 in
        lessThanInteger (fromInt#5 0) (lower#6 b#4) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBytes_21
    [(lam fromInt_22
      [(lam dataFields_2
        [(lam fromUnit_3
          [(lam fromInt_5
            [(lam lower_6
              [(lam fromBool_7
                [(lam match_8
                  [(lam main_1 main_1)
                    (case
                      match_8
                      (lam field_9
                        (lam field_10
                          [(lam projection_29
                            (case
                              projection_29
                              (lam tag_13
                                (lam fields_14
                                  (case
                                    fields_14
                                    (lam ignored_15
                                      (lam fieldTail_16
                                        (case
                                          fieldTail_16
                                          (lam field_12
                                            (lam fieldTail_17
                                              [(lam b_4
                                                [[(builtin lessThanInteger) [fromInt_5 (con integer 0)]] [lower_6 b_4]])
                                                field_12]))
                                          (error))))
                                    (error))))))
                            [(builtin unConstrData) field_9]]))
                      [fromBool_7 (con bool False)])])
                  [dataFields_2 [fromUnit_3 (con unit ())]]])
                (lam value_28 value_28)])
              (builtin unIData)])
            (lam value_27 value_27)])
          (lam value_26 value_26)])
        (lam arg_18
          (case
            arg_18
            [[(force (builtin mkCons))
              [[(lam field_19
                (lam field_20
                  [[(builtin constrData) (con integer 0)]
                    [[(force (builtin mkCons)) field_19]
                      [[(force (builtin mkCons)) field_20] (con (list data) [])]]]))
                [fromBytes_21 (con bytestring #)]]
                [fromInt_22 (con integer 14)]]]
              [[(force (builtin mkCons))
                [[(lam field_23
                  (lam field_24
                    [[(builtin constrData) (con integer 0)]
                      [[(force (builtin mkCons)) field_23]
                        [[(force (builtin mkCons)) field_24] (con (list data) [])]]]))
                  [fromBytes_21 (con bytestring #aa)]]
                  [fromInt_22 (con integer 0)]]]
                (con (list data) [])]]))])
      (builtin iData)])
    (builtin bData)])
--- optimized Core
let fromBytes#11 : bytes -> Bytes = bData in
let fromInt#30 : int -> Int = iData in
let anf#59 : Bytes = fromBytes#11 (con bytestring #) in
let anf#61 : Int = fromInt#30 14 in
let anf#57 : list Data = mkCons anf#61 (con (list data) []) in
let anf#58 : list Data = mkCons anf#59 anf#57 in
let anf#62 : Main.Fields = constrData 0 anf#58 in
let anf#65 : Bytes = fromBytes#11 (con bytestring #aa) in
let anf#67 : Int = fromInt#30 0 in
let anf#63 : list Data = mkCons anf#67 (con (list data) []) in
let anf#64 : list Data = mkCons anf#65 anf#63 in
let anf#68 : Main.Fields = constrData 0 anf#64 in
let anf#69 : list Main.Fields = mkCons anf#68 (con (list data) []) in
let match#45 : list Main.Fields = mkCons anf#62 anf#69 in
case@List match#45 of
  Nil -> false
  Cons field#46 field#47 -> let projection#48 : pair int (list Data) = unConstrData field#46 in
  case@Pair projection#48 of
    Pair tag#49 fields#50 -> case@List fields#50 of
      Cons ignored#51 fieldTail#52 -> case@List fieldTail#52 of
        Cons field#53 fieldTail#54 -> let anf#72 : int = unIData field#53 in
        lessThanInteger 0 anf#72
--- optimized UPLC
(program 1.1.0
  [(lam builtin_26
    [(lam partial_27
      [(lam fromBytes_1
        [(lam fromInt_2
          [(lam anf_3
            [(lam anf_4
              [(lam anf_5
                [(lam anf_6
                  [(lam anf_7
                    [(lam anf_8
                      [(lam anf_9
                        [(lam anf_10
                          [(lam anf_12
                            [(lam anf_13
                              [(lam anf_14
                                [(lam match_15
                                  (case
                                    match_15
                                    (lam field_16
                                      (lam field_17
                                        [(lam projection_18
                                          (case
                                            projection_18
                                            (lam tag_19
                                              (lam fields_20
                                                (case
                                                  fields_20
                                                  (lam ignored_21
                                                    (lam fieldTail_22
                                                      (case
                                                        fieldTail_22
                                                        (lam field_23
                                                          (lam fieldTail_24
                                                            [(lam anf_25 [[(builtin lessThanInteger) (con integer 0)] anf_25])
                                                              [(builtin unIData) field_23]]))
                                                        (error))))
                                                  (error))))))
                                          [(builtin unConstrData) field_16]]))
                                    (con bool False)))
                                  [[builtin_26 anf_7] anf_14]])
                                [[builtin_26 anf_13] (con (list data) [])]])
                              [partial_27 anf_12]])
                            [[builtin_26 anf_8] anf_10]])
                          [[builtin_26 anf_9] (con (list data) [])]])
                        [fromInt_2 (con integer 0)]])
                      [fromBytes_1 (con bytestring #aa)]])
                    [partial_27 anf_6]])
                  [[builtin_26 anf_3] anf_5]])
                [[builtin_26 anf_4] (con (list data) [])]])
              [fromInt_2 (con integer 14)]])
            [fromBytes_1 (con bytestring #)]])
          (builtin iData)])
        (builtin bData)])
      [(builtin constrData) (con integer 0)]])
    (force (builtin mkCons))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 2654160, memory: 13249
