crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__little_single_constructor_keeps_scrutinee_effects.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 907
description: "module Main exposing (..)\ntype token = Token\nconsume : token -> int\nconsume value = case value of\n    Token -> 42\nmain : int\nmain = consume (trace \"token input\" Token)\n"
---
--- unoptimized Core
let message#9 : string = "token input" in
let fromInt#5 : int -> int = \value#8 : int -> value#8 in
let consume#2 : Main.token -> int = \value#4 : Main.token -> let match#6 : Main.token = value#4 in
fromInt#5 42 in
let fromString#3 : string -> string = \value#7 : string -> value#7 in
let main#1 : int = consume#2 (trace (fromString#3 message#9) in constr 0) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam message_9
    [(lam fromInt_5
      [(lam consume_2
        [(lam fromString_3
          [(lam main_1 main_1)
            [consume_2
              (force [[(force (builtin trace)) [fromString_3 message_9]] (delay (constr 0))])]])
          (lam value_7 value_7)])
        (lam value_4 [(lam match_6 [fromInt_5 (con integer 42)]) value_4])])
      (lam value_8 value_8)])
    (con string "token input")])
--- optimized Core
let anf#20 : Main.token = trace "token input" in constr 0 in
42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam anf_1 (con integer 42))
      (force [[builtin_2 (con string "token input")] (delay (constr 0))])])
    (force (builtin trace))])
--- result
(con integer 42)
--- logs
["token input"]
--- budget
cpu: 619598, memory: 3632
