crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__mixed_boolean_representations_short_circuit.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 772
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..))\nimport Bool\nimport Logic\nimport Lift exposing (Lift)\nboth : (Lift bool 'a, Lift bool 'b) => 'a -> 'b -> bool\nboth a b = Logic.and a b\nbad : unit -> Bool.Bool\nbad _ = fail\nmain : bool\nmain =\n    if Logic.or Bool.True (bad ()) then\n        both Bool.True True\n    else False\n"
---
--- unoptimized Core
let fromBool#2 : bool -> bool = \value#18 : bool -> value#18 in
let bad#9 : unit -> nash/base:Bool.Bool = \arg#19 : unit -> let match#20 : unit = arg#19 in
error in
let fromUnit#10 : unit -> unit = \value#21 : unit -> value#21 in
let both#17 : 'erased -> 'erased -> bool = \a#22 : 'erased b#23 : 'erased -> let lower#24 : nash/base:Bool.Bool -> bool = \value#25 : nash/base:Bool.Bool -> let match#26 : nash/base:Bool.Bool = value#25 in
let projection#30 : pair int (list Data) = unConstrData match#26 in
let projection#29 : pair int (list Data) = projection#30 in
case@Pair projection#29 of
  Pair tag#27 fields#28 -> case@Tag tag#27 of
    0 -> false
    1 -> true in
case@Bool lower#24 a#22 of
  True -> b#23
  False -> false in
let lower#3 : nash/base:Bool.Bool -> bool = \value#4 : nash/base:Bool.Bool -> let match#5 : nash/base:Bool.Bool = value#4 in
let projection#31 : pair int (list Data) = unConstrData match#5 in
let projection#8 : pair int (list Data) = projection#31 in
case@Pair projection#8 of
  Pair tag#6 fields#7 -> case@Tag tag#6 of
    0 -> false
    1 -> true in
let main#1 : bool = case@Bool (case@Bool lower#3 (constrData 1 (con (list data) [])) of
  True -> true
  False -> let lower#11 : nash/base:Bool.Bool -> bool = \value#12 : nash/base:Bool.Bool -> let match#13 : nash/base:Bool.Bool = value#12 in
  let projection#32 : pair int (list Data) = unConstrData match#13 in
  let projection#16 : pair int (list Data) = projection#32 in
  case@Pair projection#16 of
    Pair tag#14 fields#15 -> case@Tag tag#14 of
      0 -> false
      1 -> true in
  lower#11 (bad#9 (fromUnit#10 ()))) of
  True -> both#17 (constrData 1 (con (list data) [])) (fromBool#2 true)
  False -> fromBool#2 false in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_2
    [(lam bad_9
      [(lam fromUnit_10
        [(lam both_17
          [(lam lower_3
            [(lam main_1 main_1)
              (case
                (case
                  [lower_3 [[(builtin constrData) (con integer 1)] (con (list data) [])]]
                  [(lam lower_11 [lower_11 [bad_9 [fromUnit_10 (con unit ())]]])
                    (lam value_12
                      [(lam match_13
                        [(lam projection_32
                          [(lam projection_16
                            (case
                              projection_16
                              (lam tag_14 (lam fields_15 (case tag_14 (con bool False) (con bool True))))))
                            projection_32])
                          [(builtin unConstrData) match_13]])
                        value_12])]
                  (con bool True))
                [fromBool_2 (con bool False)]
                [[both_17 [[(builtin constrData) (con integer 1)] (con (list data) [])]]
                  [fromBool_2 (con bool True)]])])
            (lam value_4
              [(lam match_5
                [(lam projection_31
                  [(lam projection_8
                    (case
                      projection_8
                      (lam tag_6 (lam fields_7 (case tag_6 (con bool False) (con bool True))))))
                    projection_31])
                  [(builtin unConstrData) match_5]])
                value_4])])
          (lam a_22
            (lam b_23
              [(lam lower_24 (case [lower_24 a_22] (con bool False) b_23))
                (lam value_25
                  [(lam match_26
                    [(lam projection_30
                      [(lam projection_29
                        (case
                          projection_29
                          (lam tag_27 (lam fields_28 (case tag_27 (con bool False) (con bool True))))))
                        projection_30])
                      [(builtin unConstrData) match_26]])
                    value_25])]))])
        (lam value_21 value_21)])
      (lam arg_19 (case arg_19 (error)))])
    (lam value_18 value_18)])
--- optimized Core
let anf#66 : nash/base:Bool.Bool = constrData 1 (con (list data) []) in
let projection#52 : pair int (list Data) = unConstrData anf#66 in
let anf#67 : bool = case@Pair projection#52 of
  Pair tag#54 fields#55 -> case@Tag tag#54 of
    0 -> false
    1 -> true in
let anf#70 : bool = case@Bool anf#67 of
  True -> true
  False -> let anf#69 : nash/base:Bool.Bool = error in
  let projection#59 : pair int (list Data) = unConstrData anf#69 in
  case@Pair projection#59 of
    Pair tag#61 fields#62 -> case@Tag tag#61 of
      0 -> false
      1 -> true in
case@Bool anf#70 of
  True -> let anf#71 : nash/base:Bool.Bool = constrData 1 (con (list data) []) in
  let projection#44 : pair int (list Data) = unConstrData anf#71 in
  let anf#65 : bool = case@Pair projection#44 of
    Pair tag#46 fields#47 -> case@Tag tag#46 of
      0 -> false
      1 -> true in
  case@Bool anf#65 of
    True -> true
    False -> false
  False -> false
--- optimized UPLC
(program 1.1.0
  [(lam partial_16
    [(lam anf_1
      [(lam projection_2
        [(lam anf_5
          [(lam anf_10
            (case
              anf_10
              (con bool False)
              [(lam anf_11
                [(lam projection_12
                  [(lam anf_15 (case anf_15 (con bool False) (con bool True)))
                    (case
                      projection_12
                      (lam tag_13 (lam fields_14 (case tag_13 (con bool False) (con bool True)))))])
                  [(builtin unConstrData) anf_11]])
                [partial_16 (con (list data) [])]]))
            (case
              anf_5
              [(lam anf_6
                [(lam projection_7
                  (case
                    projection_7
                    (lam tag_8 (lam fields_9 (case tag_8 (con bool False) (con bool True))))))
                  [(builtin unConstrData) anf_6]])
                (error)]
              (con bool True))])
          (case
            projection_2
            (lam tag_3 (lam fields_4 (case tag_3 (con bool False) (con bool True)))))])
        [(builtin unConstrData) anf_1]])
      [partial_16 (con (list data) [])]])
    [(builtin constrData) (con integer 1)]])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 1453578, memory: 8728
